Update class Wrapper