@@ -14,7 +14,8 @@ public class TestWrapper {
         Double double2 = new Double("52.56");
         System.out.println("Double: " + double2);
 
-        Float float1 = new Float(52);
+        // Float float1 = new Float(52.3456f);
+        Float float1 = Float.valueOf(52.3456f);
         Float float2 = new Float("52");
         System.out.println("Float: " + (float1 + float2));
 
